Alt+F9 shortcut doesn't hide the header #47807

Closed
opened 2016-03-15 14:54:14 +01:00 by Vincent Girès · 7 comments

System Information
Windows 7 - Quadro 4000

Blender Version
Broken: 2.77rc2 hash 1e1118e
Worked: Blender 2.76

Short description of error
The shortcut Alt+F9 doesn't hide the header in the last RC2 of Blender although the shortcut in the input preferences is correctly set for screen.header the same way as the 2.76 version.

Exact steps for others to reproduce the error
Open Blender, press Alt+F9.

**System Information** Windows 7 - Quadro 4000 **Blender Version** Broken: 2.77rc2 hash 1e1118e Worked: Blender 2.76 **Short description of error** The shortcut Alt+F9 doesn't hide the header in the last RC2 of Blender although the shortcut in the input preferences is correctly set for screen.header the same way as the 2.76 version. **Exact steps for others to reproduce the error** Open Blender, press Alt+F9.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Do you mean Alt-F10? Alt-F9 isnt assigned to anything.

Assuming it is, I cant redo the error in 2.77rc2 or master.
Does this happen on the default startup.blend? if not please submit the blend-file which shows the error.

Do you mean Alt-F10? *Alt-F9 isnt assigned to anything.* Assuming it is, I cant redo the error in 2.77rc2 or master. Does this happen on the default startup.blend? if not please submit the blend-file which shows the error.
Author

Yes this is with the default startup.blend.

Alt+F9 is assigned to hide/show header since Blender 2.73: https:*wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.73/UI 7c25f16f1ac4b68

Yes this is with the default startup.blend. Alt+F9 is assigned to hide/show header since Blender 2.73: https:*wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.73/UI [7c25f16f1ac4b68 ](https:*developer.blender.org/rB7c25f16f1ac4b68)

This issue was referenced by bd5bfad723

This issue was referenced by bd5bfad72337f1732419b839c595130bc8f33b05

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47807
No description provided.