Fix T47807: Toggle header shortcut doesn't work